# gfyapi.rs

./: Cargo.toml  README.md
.run/: doc.run.xml  format.run.xml
src/: api.rs  client.rs  dto.rs  error.rs  gfy.rs  lib.rs  serialize.rs  util.rs
