[package]
name = "gfycat-client"
version = "0.0.1"
authors = ["Jake Marsden <jakemarsdenjm@gmail.com>"]
repository = "https://github.com/jakemarsden/gfycat-client.rs"
readme = "README.md"
license = "MIT"
publish = false
edition = "2018"

[lib]
name = "gfycat_client"
path = "src/lib.rs"

[dependencies]
num-derive = "0.3"
num-traits = "0.2.12"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_repr = "0.1.6"
tokio = { version = "0.2.21", features = ["macros", "rt-threaded"] }
